--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "bugs": {
     "url": "https://github.com/michielmulders/hip412-validator/issues"
   },
+  "homepage": "https://github.com/michielmulders/hip412-validator#hip412-validator",
   "dependencies": {
     "jsonschema": "^1.4.1"
   }
